--- a/static/css/erekonfa.css
+++ b/static/css/erekonfa.css
@@ -12,9 +12,13 @@ body {
     z-index: 1;
     overflow: hidden;
 }
+img {
+    margin: 10px;
+    padding: 10px;
+}
 .ere {
     margin: 0;
-    margin-top: 10%;
+    margin-top: 5%;
     padding: 0;
     padding-top: 1%;
     text-align: center;
