--- a/static/css/erekonfa.css
+++ b/static/css/erekonfa.css
@@ -35,7 +35,7 @@ img {
 .tid {
     color: #aaa;
     margin: 0;
-    margin-top: 100pt;
+    margin-top: 2%;
     padding: 0;
     padding-top: 1%;
     text-align: center;
