--- a/static/css/erekonfa.css
+++ b/static/css/erekonfa.css
@@ -2,7 +2,7 @@ html {
     background-color: #111;
 }
 body {
-    color: #fff;
+    color: #ccc;
     background-color: #111;
     display: table;
     height: 100%;
@@ -11,6 +11,11 @@ body {
     font-family: sans-serif;
     z-index: 1;
     overflow: hidden;
+    background-image: url(../img/winter.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 img {
     margin: 10px;
@@ -23,6 +28,7 @@ img {
     padding-top: 1%;
     text-align: center;
     font-size: 24pt;
+    font-size: 4vw;
     width: 100%;
 }
 .konfa {
@@ -30,15 +36,17 @@ img {
     margin: 0;
     padding-top: 1%;
     font-size: 80pt;
+    font-size: 12vw;
     text-align: center;
 }
 .tid {
-    color: #aaa;
+    color: #888;
     margin: 0;
     margin-top: 2%;
     padding: 0;
     padding-top: 1%;
     text-align: center;
     font-size: 24pt;
+    font-size: 2vw;
     width: 100%;
 }
