--- a/static/css/erekonfa.css
+++ b/static/css/erekonfa.css
@@ -27,23 +27,23 @@ img {
     padding: 0;
     padding-top: 1%;
     text-align: center;
-    font-size: 34pt;
+    font-size: 24pt;
     width: 100%;
 }
 .konfa {
     padding: 0;
     margin: 0;
     padding-top: 1%;
-    font-size: 100pt;
+    font-size: 80pt;
     text-align: center;
 }
 .tid {
-    color: #888;
+    color: #aaa;
     margin: 0;
     margin-top: 2%;
     padding: 0;
     padding-top: 1%;
     text-align: center;
-    font-size: 20pt;
+    font-size: 24pt;
     width: 100%;
 }
