fixed text color

--- a/static/css/erekonfa.css
+++ b/static/css/erekonfa.css
@@ -38,7 +38,7 @@ img {
     text-align: center;
 }
 .tid {
-    color: #aaa;
+    color: #666;
     margin: 0;
     margin-top: 2%;
     padding: 0;
