Fixed web summit conference

--- a/static/css/erekonfa.css
+++ b/static/css/erekonfa.css
@@ -12,7 +12,7 @@ body {
     font-family: sans-serif;
     z-index: 1;
     overflow: hidden;
-    background-image: url(../img/sailing.gif);
+    background-image: url(../img/websummit.png);
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
